--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,10 @@
 :root {
   font-family: "Dosis", sans-serif;
+  font-size: 62.5%;
 
   line-height: 2.4rem;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
-  /* font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%; */
 }
