--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,8 @@ body {
   row-gap: 1rem;
   grid-template-columns: 1fr 1fr;
   font-weight: 400;
-  /* width: 96rem;
+  width: 72rem;
+  /* 
   height: 48rem; */
   padding: 4.8rem;
 }
